tests/paczka2/big_fuzzy/24028678.err
Error in line 3: nsGDDG S993 0,3
Error in line 2: dHOJg S993 21,1
Error in line 5: nsGDDG A492 85,2
Error in line 14: nsGDDG S993 117,5
Error in line 24: tFU8vk1lXe A742 73,7
Error in line 21: nsGDDG S863 99,5
Error in line 29: nsGDDG S993 46,4
Error in line 49: tFU8vk1lXe S993 51,7
Error in line 66: nsGDDG A492 17,4
Error in line 59: f5u6Z8g2 S863 2,3
Error in line 77: A742 S99D 16,6
Error in line 80: A742 S993 78,7
Error in line 75: f5u6Z8g2 A742 99,8
Error in line 86: 8nnRc A492 52,6
Error in line 94: nsGDDG A492 55,0
Error in line 95: oszDPfYH7 S993 34,5
Error in line 110: tFU8vk'lXe A742 '6,0
Error in line 116: oszDPfYH7 A492 74,26
Error in line 126: dHOJg A492 6o,7
Error in line 130: f5u6Z8g2 S993 12,7
Error in line 142: oszDPfYH7 A742 13,8
Error in line 151: oszDPfYH7 S993 38,0
Error in line 153: oszDPfYH7 A492 -1,7
Error in line 152: oszDPfYH7 A492 9,9
Error in line 148: nsGDDG A492 83,0
Error in line 158: 8nnRc A742 63,6
Error in line 157: nsGDDG S993 73,8
Error in line 160: 8nnRc S863 39,6
Error in line 168: tFU8vk1lXe S863 81,3
Error in line 165: f5u6Z8g2 A492 49,4
Error in line 169: tFU8vk1lXe S993 72,4
Error in line 175: tFU8vk1lXe S863 32,8
Error in line 181: A742 S863 123,33
Error in line 167: nsGDDG S863 30,3
Error in line 194: f5u6Z8g2 S993 87,3
Error in line 203: A742 S993 25,2
Error in line 206: tFU8vk1lXe A492 89,2
Error in line 215: tFU8vk1lXe A742 255,t
Error in line 214: 8nnRc S993 55,1
Error in line 216: f5u6Z8g2 A492 80,0
Error in line 205: oszDPfYH7 A742 44,7
Error in line 224: oszDPfYH7 S863 31,2
Error in line 223: A742 S863 31,5
Error in line 230: tFU8vk1lXe A742 283,6
Error in line 240: tFU8vk1lXe A492 41,8
Error in line 246: oszDPfYH7 S993 39,9
